ENG-894 fixing side menu on safari

--- a/sass/internal-page/InternalPage.scss
+++ b/sass/internal-page/InternalPage.scss
@@ -116,13 +116,8 @@
 }
 
 .nav-pf-vertical { //sass-lint:disable-line class-name-format
-  &,
   .list-group-item > a { // sass-lint:disable-line force-element-nesting class-name-format
-    width: calc(#{$nav-pf-vertical-width} + 15px);
-  }
-
-  .secondary-nav-item-pf:hover > a { // sass-lint:disable-line force-element-nesting class-name-format
-    width: calc(#{$nav-pf-vertical-width} + 16px);
+    padding-left: 10px;
   }
 }
 
